src/components/layouts/layout-page/index.module.scss
.layout {
    overflow: hidden;
    
    &__content {
        margin: 122px 0 0 0;
    }

    @media (min-width: 200px) {
      main, header {
        padding: 0 40px;
      }
    }

    @media (min-width: 768.98px) {
      main, header {
        padding: 0 80px;
      }
    }

    @media (min-width: 1199.98px) {
      main, header {
        padding: 0 120px;
      }
    }

    @media (min-width: 1439.98px) {
      main {
        padding: 0 calc(50vw - 670px);
      }
      header {
        padding: 0 calc(70vw - 696px);
      }
    }
}

